test/good/conversions/number02.px

Int x = 2
print x.toInt()

Float y = 2.5
print y.toFloat()
